update application properties fill

--- a/course-service/src/main/resources/application.properties
+++ b/course-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#
-#
-#spring.profiles.active=azure
-#
-#server.port=8081
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+
+spring.profiles.active=azure
+
+server.port=8081
